snapshots/serde/test_suite/tests/ui/remote/wrong_getter.rs.snap
---
source: tests/common/mod.rs
expression: funcspace_struct
---
{
  "name": null,
  "start_line": 1,
  "end_line": 22,
  "kind": "unit",
  "spaces": [
    {
      "name": "S",
      "start_line": 8,
      "end_line": 12,
      "kind": "impl",
      "spaces": [
        {
          "name": "get",
          "start_line": 9,
          "end_line": 11,
          "kind": "function",
          "spaces": [],
          "metrics": {
            "nargs": {
              "total_functions": 1.0,
              "total_closures": 0.0,
              "average_functions": 1.0,
              "average_closures": 0.0,
              "total": 1.0,
              "average": 1.0,
              "functions_min": 1.0,
              "functions_max": 1.0,
              "closures_min": 0.0,
              "closures_max": 0.0
            },
            "nexits": {
              "sum": 1.0,
              "average": 1.0,
              "min": 1.0,
              "max": 1.0
            },
            "cognitive": {
              "sum": 0.0,
              "average": 0.0,
              "min": 0.0,
              "max": 0.0
            },
            "cyclomatic": {
              "sum": 1.0,
              "average": 1.0,
              "min": 1.0,
              "max": 1.0
            },
            "halstead": {
              "n1": 7.0,
              "N1": 8.0,
              "n2": 2.0,
              "N2": 3.0,
              "length": 11.0,
              "estimated_program_length": 21.651484454403228,
              "purity_ratio": 1.9683167685821117,
              "vocabulary": 9.0,
              "volume": 34.86917501586544,
              "difficulty": 5.25,
              "level": 0.19047619047619047,
              "effort": 183.06316883329356,
              "time": 10.170176046294086,
              "bugs": 0.010746805669985824
            },
            "loc": {
              "sloc": 3.0,
              "ploc": 3.0,
              "lloc": 0.0,
              "cloc": 0.0,
              "blank": 0.0,
              "sloc_average": 3.0,
              "ploc_average": 3.0,
              "lloc_average": 0.0,
              "cloc_average": 0.0,
              "blank_average": 0.0,
              "sloc_min": 3.0,
              "sloc_max": 3.0,
              "cloc_min": 0.0,
              "cloc_max": 0.0,
              "ploc_min": 3.0,
              "ploc_max": 3.0,
              "lloc_min": 0.0,
              "lloc_max": 0.0,
              "blank_min": 0.0,
              "blank_max": 0.0
            },
            "nom": {
              "functions": 1.0,
              "closures": 0.0,
              "functions_average": 1.0,
              "closures_average": 0.0,
              "total": 1.0,
              "average": 1.0,
              "functions_min": 1.0,
              "functions_max": 1.0,
              "closures_min": 0.0,
              "closures_max": 0.0
            },
            "mi": {
              "mi_original": 134.50414427548188,
              "mi_sei": 118.44942979264312,
              "mi_visual_studio": 78.65739431314731
            },
            "abc": {
              "assignments": 0.0,
              "branches": 0.0,
              "conditions": 0.0,
              "magnitude": 0.0,
              "assignments_average": 0.0,
              "branches_average": 0.0,
              "conditions_average": 0.0,
              "assignments_min": 0.0,
              "assignments_max": 0.0,
              "branches_min": 0.0,
              "branches_max": 0.0,
              "conditions_min": 0.0,
              "conditions_max": 0.0
            }
          }
        }
      ],
      "metrics": {
        "nargs": {
          "total_functions": 1.0,
          "total_closures": 0.0,
          "average_functions": 1.0,
          "average_closures": 0.0,
          "total": 1.0,
          "average": 1.0,
          "functions_min": 0.0,
          "functions_max": 1.0,
          "closures_min": 0.0,
          "closures_max": 0.0
        },
        "nexits": {
          "sum": 1.0,
          "average": 1.0,
          "min": 0.0,
          "max": 1.0
        },
        "cognitive": {
          "sum": 0.0,
          "average": 0.0,
          "min": 0.0,
          "max": 0.0
        },
        "cyclomatic": {
          "sum": 2.0,
          "average": 1.0,
          "min": 1.0,
          "max": 1.0
        },
        "halstead": {
          "n1": 7.0,
          "N1": 9.0,
          "n2": 2.0,
          "N2": 3.0,
          "length": 12.0,
          "estimated_program_length": 21.651484454403228,
          "purity_ratio": 1.804290371200269,
          "vocabulary": 9.0,
          "volume": 38.039100017307746,
          "difficulty": 5.25,
          "level": 0.19047619047619047,
          "effort": 199.70527509086565,
          "time": 11.094737505048093,
          "bugs": 0.011388637503081254
        },
        "loc": {
          "sloc": 5.0,
          "ploc": 5.0,
          "lloc": 0.0,
          "cloc": 0.0,
          "blank": 0.0,
          "sloc_average": 2.5,
          "ploc_average": 2.5,
          "lloc_average": 0.0,
          "cloc_average": 0.0,
          "blank_average": 0.0,
          "sloc_min": 3.0,
          "sloc_max": 3.0,
          "cloc_min": 0.0,
          "cloc_max": 0.0,
          "ploc_min": 3.0,
          "ploc_max": 3.0,
          "lloc_min": 0.0,
          "lloc_max": 0.0,
          "blank_min": 0.0,
          "blank_max": 0.0
        },
        "nom": {
          "functions": 1.0,
          "closures": 0.0,
          "functions_average": 0.5,
          "closures_average": 0.0,
          "total": 1.0,
          "average": 0.5,
          "functions_min": 0.0,
          "functions_max": 1.0,
          "closures_min": 0.0,
          "closures_max": 0.0
        },
        "mi": {
          "mi_original": 125.54631001012677,
          "mi_sei": 105.62782658031449,
          "mi_visual_studio": 73.4188947427642
        },
        "abc": {
          "assignments": 0.0,
          "branches": 0.0,
          "conditions": 0.0,
          "magnitude": 0.0,
          "assignments_average": 0.0,
          "branches_average": 0.0,
          "conditions_average": 0.0,
          "assignments_min": 0.0,
          "assignments_max": 0.0,
          "branches_min": 0.0,
          "branches_max": 0.0,
          "conditions_min": 0.0,
          "conditions_max": 0.0
        }
      }
    },
    {
      "name": "main",
      "start_line": 22,
      "end_line": 22,
      "kind": "function",
      "spaces": [],
      "metrics": {
        "nargs": {
          "total_functions": 0.0,
          "total_closures": 0.0,
          "average_functions": 0.0,
          "average_closures": 0.0,
          "total": 0.0,
          "average": 0.0,
          "functions_min": 0.0,
          "functions_max": 0.0,
          "closures_min": 0.0,
          "closures_max": 0.0
        },
        "nexits": {
          "sum": 0.0,
          "average": 0.0,
          "min": 0.0,
          "max": 0.0
        },
        "cognitive": {
          "sum": 0.0,
          "average": 0.0,
          "min": 0.0,
          "max": 0.0
        },
        "cyclomatic": {
          "sum": 1.0,
          "average": 1.0,
          "min": 1.0,
          "max": 1.0
        },
        "halstead": {
          "n1": 3.0,
          "N1": 3.0,
          "n2": 1.0,
          "N2": 1.0,
          "length": 4.0,
          "estimated_program_length": 4.754887502163468,
          "purity_ratio": 1.188721875540867,
          "vocabulary": 4.0,
          "volume": 8.0,
          "difficulty": 1.5,
          "level": 0.6666666666666666,
          "effort": 12.0,
          "time": 0.6666666666666666,
          "bugs": 0.0017471609294725976
        },
        "loc": {
          "sloc": 1.0,
          "ploc": 1.0,
          "lloc": 0.0,
          "cloc": 0.0,
          "blank": 0.0,
          "sloc_average": 1.0,
          "ploc_average": 1.0,
          "lloc_average": 0.0,
          "cloc_average": 0.0,
          "blank_average": 0.0,
          "sloc_min": 1.0,
          "sloc_max": 1.0,
          "cloc_min": 0.0,
          "cloc_max": 0.0,
          "ploc_min": 1.0,
          "ploc_max": 1.0,
          "lloc_min": 0.0,
          "lloc_max": 0.0,
          "blank_min": 0.0,
          "blank_max": 0.0
        },
        "nom": {
          "functions": 1.0,
          "closures": 0.0,
          "functions_average": 1.0,
          "closures_average": 0.0,
          "total": 1.0,
          "average": 1.0,
          "functions_min": 1.0,
          "functions_max": 1.0,
          "closures_min": 0.0,
          "closures_max": 0.0
        },
        "mi": {
          "mi_original": 159.95690398326485,
          "mi_sei": 155.17000000000002,
          "mi_visual_studio": 93.54204911302038
        },
        "abc": {
          "assignments": 0.0,
          "branches": 0.0,
          "conditions": 0.0,
          "magnitude": 0.0,
          "assignments_average": 0.0,
          "branches_average": 0.0,
          "conditions_average": 0.0,
          "assignments_min": 0.0,
          "assignments_max": 0.0,
          "branches_min": 0.0,
          "branches_max": 0.0,
          "conditions_min": 0.0,
          "conditions_max": 0.0
        }
      }
    }
  ],
  "metrics": {
    "nargs": {
      "total_functions": 1.0,
      "total_closures": 0.0,
      "average_functions": 0.5,
      "average_closures": 0.0,
      "total": 1.0,
      "average": 0.5,
      "functions_min": 0.0,
      "functions_max": 1.0,
      "closures_min": 0.0,
      "closures_max": 0.0
    },
    "nexits": {
      "sum": 1.0,
      "average": 0.5,
      "min": 0.0,
      "max": 1.0
    },
    "cognitive": {
      "sum": 0.0,
      "average": 0.0,
      "min": 0.0,
      "max": 0.0
    },
    "cyclomatic": {
      "sum": 4.0,
      "average": 1.0,
      "min": 1.0,
      "max": 1.0
    },
    "halstead": {
      "n1": 10.0,
      "N1": 26.0,
      "n2": 11.0,
      "N2": 15.0,
      "length": 41.0,
      "estimated_program_length": 71.27302875388389,
      "purity_ratio": 1.7383665549727778,
      "vocabulary": 21.0,
      "volume": 180.0850143339292,
      "difficulty": 6.818181818181818,
      "level": 0.14666666666666667,
      "effort": 1227.8523704586082,
      "time": 68.2140205810338,
      "bugs": 0.03822165727458493
    },
    "loc": {
      "sloc": 22.0,
      "ploc": 18.0,
      "lloc": 0.0,
      "cloc": 0.0,
      "blank": 4.0,
      "sloc_average": 5.5,
      "ploc_average": 4.5,
      "lloc_average": 0.0,
      "cloc_average": 0.0,
      "blank_average": 1.0,
      "sloc_min": 1.0,
      "sloc_max": 5.0,
      "cloc_min": 0.0,
      "cloc_max": 0.0,
      "ploc_min": 1.0,
      "ploc_max": 5.0,
      "lloc_min": 0.0,
      "lloc_max": 0.0,
      "blank_min": 0.0,
      "blank_max": 0.0
    },
    "nom": {
      "functions": 2.0,
      "closures": 0.0,
      "functions_average": 0.5,
      "closures_average": 0.0,
      "total": 2.0,
      "average": 0.5,
      "functions_min": 0.0,
      "functions_max": 1.0,
      "closures_min": 0.0,
      "closures_max": 0.0
    },
    "mi": {
      "mi_original": 92.99928124111631,
      "mi_sei": 58.87602929840162,
      "mi_visual_studio": 54.38554458544814
    },
    "abc": {
      "assignments": 0.0,
      "branches": 0.0,
      "conditions": 0.0,
      "magnitude": 0.0,
      "assignments_average": 0.0,
      "branches_average": 0.0,
      "conditions_average": 0.0,
      "assignments_min": 0.0,
      "assignments_max": 0.0,
      "branches_min": 0.0,
      "branches_max": 0.0,
      "conditions_min": 0.0,
      "conditions_max": 0.0
    }
  }
}
